--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 
+#Custom
+*.cache
+*Temporary*
+
 # =========================
 # Operating System Files
 # =========================
